--- a/questions.html
+++ b/questions.html
@@ -62,5 +62,8 @@
             });
         });
     </script>
+    <footer class="text-center mt-8 mb-8">
+        <a href="index.html" class="text-teal-600 font-semibold hover:underline">Go to Theory page</a>
+    </footer>
 </body>
 </html>
